--- a/css/style.css
+++ b/css/style.css
@@ -4,11 +4,101 @@
 * {
   margin: 0;
   padding: 0;
+  list-style: none;
+  text-decoration: none;
 }
+
+/* ver: https://www.w3schools.com/css/css3_variables.asp
+   Variáveis com escopo global => :root */
+:root {
+  --font-primary: "Baloo Da 2", serif;
+  --font-secundary: "Josefin Slab", serif;
+  --font-action: "Muli", serif;
+}
+
+.hamburguer {
+  /*background-color: red;*/
+  width: 2rem;
+  height: 2rem;
+  position: fixed;
+  z-index: 10; /*estabelece a ordem dos elementos (quanto maior o núm. mais a frente)*/
+  right: 2rem;
+  top: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  cursor: pointer;
+}
+
+/* classe show-menu é criada dentro da classe conteiner por javascript
+   elementos filhos (ex: hamburguer) do elemento que tiver 'show-menu' herdam a formatação */
+.show-menu .hamburguer {
+  right: 16rem;
+}
+
+.line {
+  width: 100%;
+  height: 0.1rem;
+  background-color: #fff;
+  box-shadow: 0.1rem 0.1rem 1px #000;
+  transition: transform 1s;
+}
+
+.show-menu #line1 {
+  transform: rotate(45deg) translate(0.37rem, 0.4rem);
+}
+
+.show-menu #line2 {
+  opacity: 0;
+  visibility: hidden;
+}
+
+.show-menu #line3 {
+  transform: rotate(-45deg) translate(0.25rem, -0.45rem);
+}
+
+.hamburguer span {
+  position: absolute;
+  left: 3rem;
+  font-family: var(--font-action);
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: 0.01rem;
+  background: #ad5389; /* fallback for old browsers */
+
+  /* Chrome 10-25, Safari 5.1-6 :*/
+  background: -webkit-linear-gradient(to right, #ad5389, #3c1053);
+
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ :*/
+  background: linear-gradient(to right, #ad5389, #3c1053);
+
+  padding: .5rem 1.5rem; /* dois valores: 1)top e bottom  2)left e right*/
+  border: none;
+  border-radius: 5px;
+
+  visibility: hidden;
+  /*opacity: 0; */
+}
+
+.hamburguer span::before {
+  content: "";
+  position: absolute;
+  border-right: .5rem solid #ad5389;
+  border-top: .5rem solid transparent;
+  border-left: .5rem  solid transparent;
+  border-bottom: .5rem solid transparent;
+  left: -1rem;
+}
+
+.show-menu .hamburguer:hover span {
+  visibility: visible;
+  opacity: .7;
+}
+
 
 header {
   width: 100%;
-  height: 100vh;
+  height: 80vh;
   overflow: hidden; /* overflow: hidden impede a criação da barra de rolagem*/
   position: relative; /* para que seja possível utilizar elemento com posicionamento absoluto (ex: .banner) */
 }
@@ -54,7 +144,7 @@ header {
   color: #ffffff;
   font-size: 3.5rem; /* rem (root em: faz referência ao elemento principal da página). 
                      Rem permite que a fonte seja redimensionada automaticamente conforme o zoom da tela*/
-  font-family: "Baloo Da 2", serif; /* serif é para o caso de não carregar a fonte principal*/
+  font-family: var(--font-primary); /* serif é para o caso de não carregar a fonte principal*/
   font-weight: 200;
   text-shadow: 0.2rem 0.3rem 2px rgba(0, 0, 0, 0.4); /* 1)distanciamento da somra à direita, 2) distanciamento abaixo, 3) blur e 4) cor*/
   line-height: 3.5rem; /* espaçamento vertical da linha*/
@@ -64,7 +154,7 @@ header {
 }
 
 .banner p {
-  font-family: "Josefin Slab", serif;
+  font-family: var(--font-secundary);
   color: #ffffff;
   font-size: 2rem;
   text-shadow: 0.2rem 0.2rem rgba(0, 0, 0, 0.4); /* 1)distanciamento da somra à direita, 2) distanciamento abaixo, 3) blur e 4) cor*/
@@ -74,7 +164,7 @@ header {
 }
 
 .banner button {
-  font-family: "Muli", serif;
+  font-family: var(--font-action);
   color: #fff;
   text-transform: uppercase;
   letter-spacing: 0.1rem;
@@ -106,4 +196,70 @@ header {
     transform: translateY(0) rotateY(0);
     opacity: 1;
   }
+}
+
+.sidebar {
+  width: 20rem;
+  height: 100vh;
+  background-color: #fff;
+  position: fixed;
+  top: 0;
+  right: -20rem;
+  transition: all 0.5s;
+}
+
+/* classe show-menu é criada dentro da classe conteiner por javascript
+   elementos filhos do elemento que tiver 'show-menu' herdam a formatação */
+.show-menu .sidebar {
+  right: 0;
+}
+
+.menu {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  /*https://youtu.be/zeOsssqp6uc?t=1261*/
+  transform: translate(-50%, -50%); /* deixa centralizado nos eixos X e Y*/
+}
+
+.menu-item {
+  text-align: center;
+  margin-bottom: 0.5rem; /* espaçamento entre os itens*/
+}
+
+.menu-link {
+  font-family: var(--font-action);
+  font-size: 2rem;
+  color: #555;
+
+  /* define-se qual propriedade deve sofrer a transição, no caso, color: */
+  transition: color 0.7s;
+}
+
+.menu-link:hover {
+  color: rgb(113, 28, 139);
+}
+
+.social-media {
+  position: absolute;
+  bottom: 2rem;
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.social-media i {
+  color: #555;
+  height: 2.5rem;
+  width: 2.5rem;
+  font-size: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  transition: color 0.5s;
+}
+
+.social-media i:hover {
+  color: black;
 }
