--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ :*/
   background: linear-gradient(to right, #ad5389, #3c1053);
 
-  padding: .5rem 1.5rem; /* dois valores: 1)top e bottom  2)left e right*/
+  padding: 0.5rem 1.5rem; /* dois valores: 1)top e bottom  2)left e right*/
   border: none;
   border-radius: 5px;
 
@@ -83,22 +83,21 @@
 .hamburguer span::before {
   content: "";
   position: absolute;
-  border-right: .5rem solid #ad5389;
-  border-top: .5rem solid transparent;
-  border-left: .5rem  solid transparent;
-  border-bottom: .5rem solid transparent;
+  border-right: 0.5rem solid #ad5389;
+  border-top: 0.5rem solid transparent;
+  border-left: 0.5rem solid transparent;
+  border-bottom: 0.5rem solid transparent;
   left: -1rem;
 }
 
 .show-menu .hamburguer:hover span {
   visibility: visible;
-  opacity: .7;
+  opacity: 0.7;
 }
-
 
 header {
   width: 100%;
-  height: 80vh;
+  height: 100vh;
   overflow: hidden; /* overflow: hidden impede a criação da barra de rolagem*/
   position: relative; /* para que seja possível utilizar elemento com posicionamento absoluto (ex: .banner) */
 }
@@ -263,3 +262,199 @@ header {
 .social-media i:hover {
   color: black;
 }
+
+.conhecimentos {
+  display: grid;
+  grid-template-columns: repeat(16, 1fr);
+  grid-template-rows: repeat(6, 6rem);
+  row-gap: 0.5rem;
+}
+
+/* 
+O seletor corresponde a cada elemento que é o enésimo filho de seu pai.:nth-child(n)
+*/
+.conhecimento:nth-child(1) {
+  grid-column: 4 / 7; /* inicia na coluna 4 e termina na 7*/
+  grid-row: 1 / 3;
+}
+.conhecimento:nth-child(2) {
+  grid-column: 3 / 6;
+  grid-row: 3 / 5;
+}
+.conhecimento:nth-child(3) {
+  grid-column: 4 / 7;
+  grid-row: 5 / -1;
+}
+.conhecimento:nth-child(4) {
+  grid-column: 11 / 14;
+  grid-row: 1 / 3;
+}
+.conhecimento:nth-child(5) {
+  grid-column: 12 / 15;
+  grid-row: 3 / 5;
+}
+.conhecimento:nth-child(6) {
+  grid-column: 11 / 14;
+  grid-row: 5 / -1;
+}
+
+.sessao-conhecimentos {
+  background-color: #f5f5f5;
+}
+
+.sessao-header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.sessao-header h1 {
+  font-family: var(--font-primary);
+  font-size: 3rem;
+  color: #555;
+  border-bottom: solid 3px rgb(113, 28, 139);
+  margin-bottom: 1.5rem;
+}
+
+.conhecimento-header {
+  display: flex;
+  align-items: center;
+}
+
+.conhecimento-header i {
+  font-size: 2.5rem;
+}
+
+.conhecimento-header h3 {
+  font-family: var(--font-secundary);
+  font-size: 2rem;
+  padding-left: 1rem;
+}
+
+.conhecimento-text {
+  font-family: var(--font-secundary);
+  margin-top: 0.7rem;
+}
+
+.conhecimentos-img-wrapper {
+  grid-column: 7 / 11;
+  grid-row: 2 / 6;
+  width: 100%;
+}
+
+.conhecimentos-img-wrapper img {
+  object-fit: cover;
+  width: 100%;
+}
+
+.projetos {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.card {
+  width: 15rem;
+  height: 20rem;
+  position: relative;
+}
+
+.card-img-wrapper {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(31, 29, 29, 0.164);
+  border-radius: .5rem;
+}
+
+/* https://www.w3schools.com/css/css3_object-fit.asp*/
+/*object-fit = para especificar como um <img> deve ser redimensionado para caber em seu contêiner.
+  object-fit:cover = a imagem mantém sua proporção e preenche a dimensão dada. A imagem será cortada para caber
+  object-fit:fill  = a imagem é redimensionada para preencher a dimensão dada. Se necessário, a imagem será esticada ou comprimida para caber
+  object-fit:scale-down = a imagem é reduzida para a menor versão de none ou contain. */
+.card-img-wrapper img {
+  object-fit: fill;
+  width: 100%;
+  height: 20rem;
+  border-radius: .5rem;
+  opacity: .8;
+  transition: opacity .3s;
+}
+
+.card:hover .card-img-wrapper img {
+  opacity: .5;
+}
+
+.card-info {
+  position: absolute;
+  /* para que os elementos da classe fiquem sobrepostos à div img-wrapper. 
+     O posicionamento absolute precisa estar dentro de um elemento relativo */
+  bottom: 0; /* posiciona a div 'card-info' a partir do bottom do 'card'*/
+  opacity: 0;
+  visibility: hidden;
+  padding: 2rem;
+  text-shadow: 0.3rem 0.2rem 0.3rem rgba(0,0,0,.6); /* 1)distanciamento da sombra à direita, 2) distanciamento abaixo, 3) blur e 4) cor*/;
+  transition: all .3s;
+}
+ 
+.card-info h2 {
+  font-family: var(--font-primary);
+  font-size: 2rem;
+  font-weight: 500;
+  color: #eee;
+}
+
+.card-info h3 {
+  font-family: var(--font-action);
+  font-weight: bolder;
+  color:rgb(148, 44, 101);
+  margin-bottom: 1.5rem;
+}
+
+.card-info p {
+  font-family: var(--font-secundary);
+  font-size: .8rem;
+  color: #eee;
+  font-weight: 400;
+  width: 80%;
+  margin-bottom: 2rem;
+}
+
+.card-info button {
+  width: 8rem;
+  height: 2.5rem;
+
+  font-family: var(--font-action);
+  font-size: 1rem;
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
+  background: #ad5389; /* fallback for old browsers */
+
+  /* Chrome 10-25, Safari 5.1-6 :*/
+  background: -webkit-linear-gradient(to right, #ad5389, #3c1053);
+
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ :*/
+  background: linear-gradient(to right, #ad5389, #3c1053);
+
+  padding: .1rem .3rem; /* dois valores: 1)top e bottom  2)left e right*/
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+/* ao passar o mouse sobre o .card, aplica um efeito sobre .card-info: */
+.card:hover .card-info {
+  bottom: 0rem;
+  visibility: visible;
+  opacity: 1;
+  /*  animation: moveCard 1s 0.2s; */
+}
+
+@keyframes moveCard {
+  0% {
+    transform: translateY(10rem)
+  }
+  100% {
+    transform: translateY(0);
+    
+  } 
+} 
