--- a/css/style.css
+++ b/css/style.css
@@ -143,9 +143,9 @@ header {
   color: #ffffff;
   font-size: 3.5rem; /* rem (root em: faz referência ao elemento principal da página). 
                      Rem permite que a fonte seja redimensionada automaticamente conforme o zoom da tela*/
-  font-family: var(--font-primary); /* serif é para o caso de não carregar a fonte principal*/
+  font-family: var(--font-primary);
   font-weight: 200;
-  text-shadow: 0.2rem 0.3rem 2px rgba(0, 0, 0, 0.4); /* 1)distanciamento da somra à direita, 2) distanciamento abaixo, 3) blur e 4) cor*/
+  text-shadow: 0.2rem 0.3rem 2px rgba(0, 0, 0, 0.4); /* 1)distanciamento da sombra à direita, 2) distanciamento abaixo, 3) blur e 4) cor*/
   line-height: 3.5rem; /* espaçamento vertical da linha*/
   margin-bottom: 2rem; /* margem inferior para distanciar do elemento abaixo (p)*/
   opacity: 0;
@@ -162,7 +162,6 @@ header {
   animation: moveBanner 1s 0.7s forwards;
 }
 
-
 .btn {
   font-family: var(--font-action);
   color: #fff;
@@ -177,9 +176,7 @@ header {
   border-radius: 5px;
   cursor: pointer;
   box-shadow: 0 0.5rem 0.7rem rgba(0, 0, 0, 0.5);
-
 }
-
 
 .banner button {
   padding: 1rem 3rem; /* dois valores: 1)top e bottom  2)left e right*/
@@ -357,8 +354,8 @@ O seletor corresponde a cada elemento que é o enésimo filho de seu pai.:nth-ch
 }
 
 .card {
-  width: 15rem;
-  height: 20rem;
+  width: 17rem;
+  height: 25rem;
   position: relative;
 }
 
@@ -377,7 +374,7 @@ O seletor corresponde a cada elemento que é o enésimo filho de seu pai.:nth-ch
 .card-img-wrapper img {
   object-fit: fill;
   width: 100%;
-  height: 20rem;
+  height: 25rem;
   border-radius: 0.5rem;
   opacity: 0.8;
   transition: opacity 0.3s;
@@ -446,7 +443,7 @@ O seletor corresponde a cada elemento que é o enésimo filho de seu pai.:nth-ch
   }
 }
 
-.sessao-contato{
+.sessao-contato {
   width: 100%;
   height: 100vh;
   background-color: #272727;
@@ -465,7 +462,8 @@ O seletor corresponde a cada elemento que é o enésimo filho de seu pai.:nth-ch
 
 .contato-left {
   width: 35%;
-  background: linear-gradient(rgba(15,15,15,0.6), rgba(22,22,22,0.9)), url(../imagens/bg-contato.jpg);
+  background: linear-gradient(rgba(15, 15, 15, 0.6), rgba(22, 22, 22, 0.9)),
+    url(../imagens/bg-contato.jpg);
   background-size: cover;
 }
 
@@ -518,7 +516,6 @@ O seletor corresponde a cada elemento que é o enésimo filho de seu pai.:nth-ch
   max-height: 3rem;
 }
 
-
 .field-label {
   position: absolute;
   /* top, em relação ao field-group (elemento pai):*/
@@ -540,8 +537,82 @@ O seletor corresponde a cada elemento que é o enésimo filho de seu pai.:nth-ch
   border-bottom: 1px solid;
 }
 
-.btn-submit{
+.btn-submit {
   width: 80%;
-  height: 1.5rem;
+  height: 2.5rem;
   padding: 0.1rem 0.3rem; /* dois valores: 1)top e bottom  2)left e right*/
+}
+
+.sessao-orcamento {
+  width: 100%;
+  height: 100vh;
+  background: url("../imagens/bg-orcamento.jpg");
+  object-fit: cover; /* para cobrir a área*/
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.orcamento-wrapper {
+  width: 60%;
+  height: 80%;
+  background-color: #ffffff99; /* parâmetros: cor e opacidade */
+  border-radius: 10px;
+  box-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, 0.5);
+  position: relative;
+}
+
+.sessao-orcamento h1 {
+  position: absolute;
+  top: -2.5rem;
+  left: 2rem;
+  background: #ad5389; /* fallback for old browsers */
+  /* Chrome 10-25, Safari 5.1-6 :*/
+  background: -webkit-linear-gradient(to right, #ad5389, #3c1053);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ :*/
+  background: linear-gradient(to right, #ad5389, #3c1053);
+  padding: 0 3rem;
+  color: #fff;
+  font-family: var(--font-primary);
+  font-size: 3rem;
+  font-weight: lighter;
+  box-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
+}
+
+.sessao-orcamento form {
+  margin: 4rem;
+  display: grid;
+  grid-template-columns: auto 1fr; /* configura o grid para 2 colunas: primeira com tamanho auto e a segunda com o restante do espaço */
+  column-gap: 2rem; /* espaçamento entre as colunas do grid*/
+  row-gap: 2rem; /* espaçamento entre as linhas do grid*/
+}
+
+.sessao-orcamento label {
+  font-family: var(--font-secundary);
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.sessao-orcamento input[type="number"] {
+  font-family: var(--font-secundary);
+  width: 4rem;
+  font-size: 2rem;
+  outline: none;
+  border-radius: 10px;
+  border: none;
+  padding: 0.3rem;
+}
+
+/*
+.sessao-orcamento input[type="checkbox"] {
+  grid-area: 1;
+}
+*/
+
+.btn-orcamento {
+  text-transform: uppercase;
+  padding: 1rem;
+  cursor: pointer;
+  grid-column: 2; /* posiciona o botão na segunda coluna do grid*/
 }
