--- a/css/style.css
+++ b/css/style.css
@@ -16,12 +16,18 @@
   --font-action: "Muli", serif;
 }
 
+html {
+  /* para suavizar o comportamento da barra de rolagem: */
+  scroll-behavior: smooth;
+
+}
+
 .hamburguer {
   /*background-color: red;*/
   width: 2rem;
   height: 2rem;
   position: fixed;
-  z-index: 10; /*estabelece a ordem dos elementos (quanto maior o núm. mais a frente)*/
+  z-index: 110; /*estabelece a ordem dos elementos (quanto maior o núm. mais a frente)*/
   right: 2rem;
   top: 2rem;
   display: flex;
@@ -206,6 +212,8 @@ header {
   top: 0;
   right: -20rem;
   transition: all 0.5s;
+  /* um número alto (qualquer) para o elemento sidebar fique acima dos outros*/
+  z-index: 90;
 }
 
 /* classe show-menu é criada dentro da classe conteiner por javascript
@@ -605,14 +613,64 @@ O seletor corresponde a cada elemento que é o enésimo filho de seu pai.:nth-ch
 }
 
 /*
-.sessao-orcamento input[type="checkbox"] {
-  grid-area: 1;
+#js {
 }
 */
+
 
 .btn-orcamento {
   text-transform: uppercase;
   padding: 1rem;
   cursor: pointer;
   grid-column: 2; /* posiciona o botão na segunda coluna do grid*/
+}
+
+footer {
+  width: 100%;
+  height: 10rem;
+  background-color: #17181b;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-content {
+  width: 60%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer-content p {
+  font-family: var(--font-secundary);
+  color:#a7a7a7;
+  font-size: 1.2rem;
+}
+
+.social-list a {
+  margin: 0 2rem;
+  color: #a7a7a7;
+  font-size: 1.3rem;
+}
+
+.social-list ul {
+  display: flex;
+}
+
+#link-topo {
+  position: fixed;
+  right: 3rem;
+  bottom: 3rem;
+  width: 3rem;
+  height: 3rem;
+  background: #ad5389; /* fallback for old browsers */
+  /* Chrome 10-25, Safari 5.1-6 :*/
+  background: -webkit-linear-gradient(to right, #ad5389, #3c1053);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ :*/
+  background: linear-gradient(to right, #ad5389, #3c1053);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  border-radius: .3rem;
+  box-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, 0.3); 
 }
